--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
     </div>
     <div class="column-desktop-3-4">here text</div>
   </div>
-  <div class="row">
-<div class="column-desktop-1-2 column-1-3">
+
+
+<div class="row">
+<div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+<div class="reasons-container">
 <div class="reason">
     <div class="reason__icon">
       <i class="sprite sprite-man"></i>
@@ -131,20 +134,20 @@
     </div>  
     </div>
     </div>
-  </div>
-<div class="column-desktop-1-2 column-1-3">
-<div class="reason reason_fastlrn">
+  
+    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="reason reason_fastlrn">
     <div class="reason__icon">
       <i class="sprite sprite-chrono-icn"></i>  
     </div>
-    <div class="reason__text">
-      
+    <div class="reason__text">     
       хочете швидко та ефективно вивчити мову     
     </div>  
-</div>
-</div>
-<div class="column-desktop-1-2 column-1-3">
-<div class="reason reason_itrdialog">
+    </div>
+    </div>
+
+    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="reason reason_itrdialog">
     <div class="reason__icon">
       <i class="sprite sprite-dialog-man"></i> 
     </div>
@@ -152,39 +155,45 @@
       
       набридло відчувати збентеження у діалозі з іноземцем      
     </div>    
-</div>
-</div>
-<div class="column-desktop-1-2 column-1-3">
-<div class="reason reason__workskill">
+    </div>
+    </div>
+
+    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="reason reason__workskill">
     <div class="reason__icon">
       <i class="sprite sprite-chair"></i> 
     </div>
     <div class="reason__text">   
       хочете досягти результату у кар’єрному рості, але для цього потрібне володіння іноземною мовою     
     </div>    
-</div> 
-</div>
-<div class="column-desktop-1-2 column-1-3">
-<div class="reason reason__rightchoice">
+    </div> 
+    </div>
+
+    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="reason reason__rightchoice">
     <div class="reason__icon">
      <i class="sprite sprite-lightbulb"></i>
     </div>
     <div class="reason__text">      
       дуже довго обираєте між курсами та школами, але так і не обрали      
     </div>    
-</div>
-</div>
-<div class="column-desktop-1-2 column-1-3">
-<div class="reason reason__timevalue">
+    </div>
+    </div>
+
+    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="reason reason__timevalue">
     <div class="reason__icon">
      <i class="sprite sprite-calendar-clock"></i>  
     </div>
     <div class="reason__text">
       цінуєте свій час і справді хочете «заговорити», а також навчитися читати та розуміти            
     </div>
+    </div>
+    </div>
 </div>
 </div>
 </div>
+
 <div class="footer">
   <div class="wrapper">
      <span>
