--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
 
 <div class="row">
-<div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
-<div class="reasons-container">
+<div class="column-phablet-1-2 column-desktop-1-3">
+
 <div class="reason">
     <div class="reason__icon">
       <i class="sprite sprite-man"></i>
@@ -135,7 +135,7 @@
     </div>
     </div>
   
-    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="column-phablet-1-2 column-desktop-1-3">
     <div class="reason reason_fastlrn">
     <div class="reason__icon">
       <i class="sprite sprite-chrono-icn"></i>  
@@ -146,7 +146,7 @@
     </div>
     </div>
 
-    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="column-phablet-1-2 column-desktop-1-3">
     <div class="reason reason_itrdialog">
     <div class="reason__icon">
       <i class="sprite sprite-dialog-man"></i> 
@@ -158,7 +158,7 @@
     </div>
     </div>
 
-    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="column-phablet-1-2 column-desktop-1-3">
     <div class="reason reason__workskill">
     <div class="reason__icon">
       <i class="sprite sprite-chair"></i> 
@@ -169,7 +169,7 @@
     </div> 
     </div>
 
-    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="column-phablet-1-2 column-desktop-1-3">
     <div class="reason reason__rightchoice">
     <div class="reason__icon">
      <i class="sprite sprite-lightbulb"></i>
@@ -180,7 +180,7 @@
     </div>
     </div>
 
-    <div class="column-desktop-3-4 column-desktop-1-2 column-1-3">
+    <div class="column-phablet-1-2 column-desktop-1-3">
     <div class="reason reason__timevalue">
     <div class="reason__icon">
      <i class="sprite sprite-calendar-clock"></i>  
@@ -192,7 +192,7 @@
     </div>
 </div>
 </div>
-</div>
+
 
 <div class="footer">
   <div class="wrapper">
